[metadata]
name = eqassoc
version = 0.1.0
description = Earthquake–well association (stage vs present), resolution-aware, CRS-safe
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas>=2.0
    numpy>=1.24
    geopandas>=0.13
    shapely>=2.0
    scikit-learn>=1.2
    SQLAlchemy>=2.0
    pymysql>=1.0
    pyproj>=3.5
    joblib>=1.2
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    eq-assoc = eqassoc.cli:main
